# bounce

./: .gitignore  LICENSE  README.md  environment.yml  main.py  pyproject.toml  reproduce_results.sh  setup.cfg  singularity_container
.github/workflows/: docs.yml  pytest.yml  singularity.yml
bounce/: __init__.py  benchmarks.py  bounce.py  candidates.py  gaussian_process.py  neighbors.py  projection.py  settings.py  test_benchmarks.py  test_candidates.py  test_gaussian_process.py  test_poli_integration.py  test_projection.py  test_trust_region.py  trust_region.py
bounce/kernel/: binary_latent_kernel.py  categorical_mixture.py  test_categorical_mixture.py
bounce/util/: benchmark.py  data_handling.py  data_loading.py  pest_control.py  printing.py  sat.py  test_benchmark.py  test_data_handling.py
configs/: default.gin  singularity.gin
