[metadata]
name = bounce
version = 0.1.0
author = Leonard Papenmeier
author_email = leonard.papenmeier@posteo.de
description = 
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    numpy
    torch==2.0.0
    botorch>=0.8.2,<0.9.0
    gin-config>=0.5.0,<0.6.0
    pandas>=1.5.3,<1.6.0
    xgboost>=1.7.5,<1.8.0
    coverage>=7.2.5,<7.3.0
    requests>=2.31.0,<2.32.0
python_requires = >=3.10

[options.extras_require]
dev =
    black>=22.12.0,<22.13.0
    memray>=1.6.0,<1.7.0
    pytest>=7.3.1,<7.4.0
    coverage>=7.2.5,<7.3.0